--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@trpc/client": "^9.22.0",
+    "@trpc/next": "^9.22.0",
+    "@trpc/react": "^9.22.0",
+    "@trpc/server": "^9.22.0",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-query": "^3.34.19",
+    "zod": "^3.14.4"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
